--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,8 @@ test:
   override:
     - |
       if [ "TRUE" ]; then
-        - echo "Starting the build..."  
-        - sleep 60 :
+        echo "Starting the build...";
+        sleep 60 :
             timeout : 30
       else
         echo "skipping the build (as not triggered by nightly API call)"
