--- a/circle.yml
+++ b/circle.yml
@@ -6,4 +6,5 @@ test:
         sleep 10
       else
         echo "skipping the build (as not triggered by nightly API call)"
-      fi;) 
+      fi;) :\n
+        timeout: 15
