--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,9 @@
 test:
   override:
-    - |
-      (if [ "TRUE" ]; then
+    - (if [ "TRUE" ]; then
         echo "Starting the build..."
         sleep 15
       else
         echo "skipping the build (as not triggered by nightly API call)"
-      fi) :
+      fi):
       timeout: 10
