--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,9 @@
 test:
   override:
-    (if [ "TRUE" ]; then
-      echo "Starting the build..."
-      sleep 15
-    else
-      echo "skipping the build (as not triggered by nightly API call)"
-    fi)
-    timeout: 10
+    - (if [ "TRUE" ]; then
+        echo "Starting the build..."
+        sleep 15
+      else
+        echo "skipping the build (as not triggered by nightly API call)"
+      fi)
+    - timeout: 10
