--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,9 @@
 test:
   override:
-    - (if [ "TRUE" ]; then echo "Starting the build...";sleep 15; else echo "skipping the build (as not triggered by nightly API call)"; fi):
-        timeout: 14
+    #- (if [ "TRUE" ]; then echo "Starting the build...";sleep 15; else echo "skipping the build (as not triggered by nightly API call)"; fi):
+    #    timeout: 14
+    - DATE=$(date +"%d-%m-%Y")
+    - echo $DATE
+    - STR="THIS IS A TEST STRING"
+    - echo $STR
+    
