--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,5 @@ test:
   override:
     #- (if [ "TRUE" ]; then echo "Starting the build...";sleep 15; else echo "skipping the build (as not triggered by nightly API call)"; fi):
     #    timeout: 14
-    - DATE=$(date +"%d-%m-%Y")
-    - echo $DATE
-    - STR="THIS IS A TEST STRING"
-    - echo $STR
+    - DATE=$(date +"%d-%m-%Y"); echo $DATE; STR="THIS IS A TEST STRING"; echo $STR
     
